src/test/ui/consts/const-eval/index-out-of-bounds-never-type.stderr
warning: any use of this value will cause an error
  --> $DIR/index-out-of-bounds-never-type.rs:7:61
   |
LL |     const VOID: ! = { let x = 0 * std::mem::size_of::<T>(); [][x] };
   |     --------------------------------------------------------^^^^^---
   |                                                             |
   |                                                             index out of bounds: the len is 0 but the index is 0
   |
note: lint level defined here
  --> $DIR/index-out-of-bounds-never-type.rs:2:9
   |
LL | #![warn(const_err)]
   |         ^^^^^^^^^

error: erroneous constant encountered
  --> $DIR/index-out-of-bounds-never-type.rs:12:13
   |
LL |     let _ = PrintName::<T>::VOID;
   |             ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

